# openfabric-test

./: ignite.py  intents.json  main.py  pyproject.toml  start.sh
models/: ScienceBot.py  data.csv  utils.py
