[tool.poetry]
name = "openfabric-test"
version = "1.1"
description = "cognitive-assistant"
authors = ["Eyouale"]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = "0.1.11"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
nltk = "^3.8.1"
Flask-SocketIO = "4.3.1"
python-engineio = "3.13.2"
python-socketio = "4.6.0"
Flask ="2.0.3"
Werkzeug = "2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
